// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel styled component extract basic 1`] = `
"import \\"./styled.test.emotion.css\\";
const H1 = styled(\\"h1\\", [\\"styled-H1-10x82eg\\"]);"
`;

exports[`babel styled component extract basic 2`] = `
".styled-H1-10x82eg {
    display: -webkit-box; display: -ms-flexbox; display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: var(--css-hash-0)
}
.styled-H1-10x82eg:hover {
    background-color: green
}
@media (max-width: 500px) {
    .styled-H1-10x82eg {
        height: var(--css-hash-1);
        position: fixed
    }
}
@media print {
    .styled-H1-10x82eg {
        display: none
    }
}
.styled-H1-10x82eg::before {
    color: blue;
    width: 20px;
    height: 20px;
    content: 'pseudo'
}"
`;

exports[`babel styled component extract no use 1`] = `
"import \\"./styled.test.emotion.css\\";
styled(\\"h1\\", [\\"styled-0\\"]);"
`;

exports[`babel styled component extract no use 2`] = `".styled-0 {}"`;

exports[`babel styled component inline basic 1`] = `
"const H1 = /*#__PURE__*/styled('h1', [], [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [{
    'fontSize': \`\${x0}\`
  }];
});"
`;

exports[`babel styled component inline composes based on props 1`] = `
"const cls1 = /*#__PURE__*/css([], [], function createEmotionStyledRules() {
  return [{
    'width': '20px'
  }];
});
const H1 = /*#__PURE__*/styled('h1', [props => {
  return props.a ? cssA : cssB;
}], [fontSize + 'px', props => props.translateX], function createEmotionStyledRules(x0, x1) {
  return [{
    'fontSize': \`\${x0}\`,
    'height': '20px',
    'WebkitTransform': \`translateX(\${x1})\`,
    'transform': \`translateX(\${x1})\`
  }];
});"
`;

exports[`babel styled component inline dynamic fns 1`] = `
"const Avatar = /*#__PURE__*/styled('img', [], [props => props.theme.borderRadius, props => props.theme.borderColor], function createEmotionStyledRules(x0, x1) {
  return [{
    'width': '96px',
    'height': '96px',
    'borderRadius': \`\${x0}\`,
    'border': \`1px solid \${x1}\`
  }];
});"
`;

exports[`babel styled component inline function call 1`] = `
"/*#__PURE__*/styled(MyComponent, [], [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [{
    'fontSize': \`\${x0}\`
  }];
});"
`;

exports[`babel styled component inline interpolation in different places 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', [], [fontSize + 'px', props => props.translateX, something, something, props => props.translateX, props => props.translateX, props => props.translateX, props => props.translateX, props => props.translateX, props => props.translateX], function createEmotionStyledRules(x0, x1, x2, x3, x4, x5, x6, x7, x8, x9) {
  return [{
    'fontSize': \`\${x0}\`,
    'height': '20px',
    'WebkitTransform': \`translateX(\${x1}); -webkit-transform: translateX(\${x4}) translateY(\${x5})\`,
    'transform': \`translateX(\${x1}); transform: translateX(\${x4}) translateY(\${x5})\`,
    'height1': \`\${x2}wow\`,
    'width': \`w\${x3}ow\`,
    'transform1': \`translateX(\${x6}) translateY(\${x7})\`,
    'transform2': \`translateX(\${x8}) translateY(\${x9}\`
  }];
});"
`;

exports[`babel styled component inline media query 1`] = `
"const H1 = /*#__PURE__*/styled(\\"h1\\", [], [], function createEmotionStyledRules() {
  return [{
    \\"@media print\\": {
      \\"fontSize\\": \\"10pt\\"
    },
    \\"@media screen\\": {
      \\".child-selector\\": {
        \\"fontSize\\": \\"13px\\"
      }
    },
    \\"@media screen, print\\": {
      \\"&:hover + &\\": {
        \\"lineHeight\\": \\"1.2\\"
      }
    },
    \\"@media only screen   and (min-device-width: 320px)   and (max-device-width: 480px)  and (-webkit-min-device-pixel-ratio: 2)\\": {
      \\".child-selector\\": {
        \\"lineHeight\\": \\"1.4\\"
      }
    }
  }];
});"
`;

exports[`babel styled component inline more than 10 dynamic values 1`] = `
"const H1 = /*#__PURE__*/styled('h1', [], ['underline', 54, 'white', 'black', 'block', '3px', '25px', '500px', 100, '18px', 'center', p => p.theme.blue], function createEmotionStyledRules(x0, x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11) {
      return [{
            'WebkitTextDecoration': \`\${x0}\`,
            'textDecoration': \`\${x0}\`,
            'borderRight': \`solid blue \${x1}px\`,
            'background': \`\${x2}\`,
            'color': \`\${x3}\`,
            'display': \`\${x4}\`,
            'borderRadius': \`\${x5}\`,
            'padding': \`\${x6}\`,
            'width': \`\${x7}\`,
            'zIndex': \`\${x8}\`,
            'fontSize': \`\${x9}\`,
            'textAlign': \`\${x10}\`,
            'borderLeft': \`\${x11}\`
      }];
});"
`;

exports[`babel styled component inline name is correct with no identifier 1`] = `
"
/*#__PURE__*/css([], [], function createEmotionStyledRules() {
        return [{
                \\"margin\\": \\"12px 48px\\",
                \\"color\\": \\"#ffffff\\"
        }];
});"
`;

exports[`babel styled component inline nested 1`] = `
"const H1 = /*#__PURE__*/styled('h1', [], [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [{
    'fontSize': \`\${x0}\`,
    '& div': {
      'color': 'blue'
    },
    '& div span': {
      'color': 'red'
    }
  }];
});"
`;

exports[`babel styled component inline no dynamic 1`] = `
"/*#__PURE__*/styled(\\"h1\\", [], [], function createEmotionStyledRules() {
  return [{
    \\"color\\": \\"blue\\"
  }];
});"
`;

exports[`babel styled component inline no use 1`] = `
"/*#__PURE__*/styled(\\"h1\\", [], [], function createEmotionStyledRules() {
  return [{}];
});"
`;

exports[`babel styled component inline object composes with classes 1`] = `
"
const H1 = styled('h1', ['some-class', props => ({
  display: props.display
})]);"
`;

exports[`babel styled component inline objects based on props 1`] = `
"
const H1 = styled('h1', [{
  'padding': '10px'
}, props => ({
  display: props.display
})]);"
`;

exports[`babel styled component inline objects fn call 1`] = `
"
const H1 = styled('h1', [{
  'display': '-webkit-box; display: -ms-flexbox; display: flex'
}]);"
`;

exports[`babel styled component inline objects prefixed 1`] = `
"
const H1 = styled('h1', [{
  'borderRadius': '50%',
  'WebkitTransition': '-webkit-transform 400ms ease-in-out',
  'transition': '-webkit-transform 400ms ease-in-out; transition: transform 400ms ease-in-out; transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out',
  'WebkitBoxSizing': 'border-box',
  'boxSizing': 'border-box',
  'display': '-webkit-box; display: -ms-flexbox; display: flex',
  ':hover': {
    'WebkitTransform': 'scale(1.2)',
    'transform': 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
}]);"
`;

exports[`babel styled component inline styled component as selector 1`] = `
"
const SomeComponent = /*#__PURE__*/styled(\\"div\\", [], [], function createEmotionStyledRules() {
  return [{}];
});
/*#__PURE__*/styled(\\"h1\\", [], [SomeComponent], function createEmotionStyledRules(x0) {
  return [{
    \\"color\\": \\"blue\\",
    [\`.\${x0}\`]: {
      \\"color\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel styled component inline styled objects prefixed 1`] = `
"
const H1 = styled('h1', [{
  'borderRadius': '50%',
  'WebkitTransition': '-webkit-transform 400ms ease-in-out',
  'transition': '-webkit-transform 400ms ease-in-out; transition: transform 400ms ease-in-out; transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out',
  'WebkitBoxSizing': 'border-box',
  'boxSizing': 'border-box',
  'display': '-webkit-box; display: -ms-flexbox; display: flex',
  ':hover': {
    'WebkitTransform': 'scale(1.2)',
    'transform': 'scale(1.2)'
  }
}, props => ({
  display: props.display
})]);"
`;

exports[`babel styled component inline styled. objects 1`] = `
"
const H1 = styled(\\"h1\\", [{
  \\"padding\\": \\"10px\\"
}, props => ({
  display: props.display
})]);"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties 1`] = `
"var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; };

const defaultText = { fontSize: 20 };
const Figure = styled(\\"figure\\", [_extends({}, defaultText, defaultFigure)]);"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties and other keys 1`] = `
"var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; };

const defaultText = { fontSize: 20 };
const Figure = styled('figure', [_extends({}, defaultText, {
  'fontSize': '20px'
}, defaultFigure, defaultText2)]);"
`;

exports[`babel styled component inline styled. objects with a single spread property 1`] = `
"var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; };

const defaultText = { fontSize: 20 };
const Figure = styled(\\"figure\\", [_extends({}, defaultText)]);"
`;
